# MediaVault

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/server/: Cargo.toml
apps/server/migrations/: 001_init.sql
apps/server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs  util.rs
apps/server/src/routes/: admin.rs  albums.rs  auth.rs  dupes.rs  files.rs  mod.rs  share.rs  tags.rs
apps/web/: vite.config.ts
apps/web/src/: App.css  App.tsx  api.ts  index.css
docker/: Dockerfile
