[package]
name = "mediavault_server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
bytes = "1.10.1"
futures = "0.3.31"
hex = "0.4.3"
mime_guess = "2.0.5"
rand = "0.9.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "time", "uuid", "json", "macros"] }
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["serde", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
